--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         Library management System
       </title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        -decoration: none;
+  display: inline-block;
+  font-<meta name="viewport" content="width=device-width, initial-scale=1">
         <style> img {
             display: block;
             margin-left: auto;
@@ -20,9 +22,7 @@
   color: black;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+  textsize: 16px;
   margin: 4px 2px;
   cursor: pointer;
 }
@@ -71,28 +71,28 @@
 
     <h3 style= "font-family:verdana; font-size: 24px; color: rgb(0, 0, 0); text-align: center;"> OUR BOOKS AVAILABLE: </h3>
     <a style="font-family:verdana; font-size: 24px; color: rgb(0, 0, 0); text-align: center;" 
-    href="file:///C:/Users/Steven/OneDrive/Desktop/LMS%20CAPSTONE/SIGG.html"> >SIGGRAPH 2001 conference proceedings : August 12 - 17, 2001, [Los Angeles, California] </a>
+    href="SIGG.html"> >SIGGRAPH 2001 conference proceedings : August 12 - 17, 2001, [Los Angeles, California] </a>
     <br>
   <br> 
   
     <a style="font-family:verdana; font-size: 24px; color: rgb(0, 0, 0); text-align: center;" 
-    href="file:///C:/Users/Steven/OneDrive/Desktop/LMS%20CAPSTONE/Marx%20for%20beginners.html"> >Marx for beginners by Rius </a>
+    href="Marx for beginners.html"> >Marx for beginners by Rius </a>
 
     <br>
     <br>
 
     <a style="font-family:verdana; font-size: 24px; color: rgb(0, 0, 0); text-align: center;" 
-    href="file:///C:/Users/Steven/OneDrive/Desktop/LMS%20CAPSTONE/geography.html"> >The national Geographic Magazine, September 1950 </a>
+    href="geography.html"> >The national Geographic Magazine, September 1950 </a>
 
     <br>
     <br>
 
     <a style="font-family:verdana; font-size: 24px; color: rgb(0, 0, 0); text-align: center;" 
-    href="file:///C:/Users/Steven/OneDrive/Desktop/LMS%20CAPSTONE/dead%20famours.html"> >Dead Famous: Deaths of the Famous and Famous Deaths </a>
+    href="dead famours.html"> >Dead Famous: Deaths of the Famous and Famous Deaths </a>
     
     <br>
     <br>
 
     <a style="font-family:verdana; font-size: 24px; color: rgb(0, 0, 0); text-align: center;" 
-    href="file:///C:/Users/Steven/OneDrive/Desktop/LMS%20CAPSTONE/HRD.html"> >Human Resource Development: The Philippine Experience : Readings for the Practitioner </a>
+    href="HRD.html"> >Human Resource Development: The Philippine Experience : Readings for the Practitioner </a>
     
